--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/sjgjny386/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/download-49-320x200.jpg"><p align="center">【直播预告】专访《蚕食美国》制片人</p></a>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1" title="【直播预告】专访《蚕食美国》制片人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/download-49-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/download-49-320x200.jpg"><p align="center">【直播】专访《蚕食美国》制片人</p></a>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1" title="【直播】专访《蚕食美国》制片人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/download-49-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487273.md#1" title="拜登电邮门  朱利安尼：将发布更多爆料""><img width="73" src="https://i.epochtimes.com/assets/uploads/2006/11/611140940171508-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486819.md#1" title="【一线采访】民众厦门举横幅要中共下台""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482137.md#1" title="【最新疫情10.19】美加边境关闭延至11月""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RW499-1-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485442.md#1" title="华为大势已去？跨大西洋联盟打造清洁网络""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485256.md#1" title="川普抵加州橙县 上万选民海陆两地欢迎""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/2-5-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://sjgjny386.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487409.md#1">白宫幕僚长：政府将对科技巨头提起诉讼</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487667.md#1">川普竞选团队：辩论委员会挑的主题偏拜登</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌如是大气回应</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487592.md#1">黄脸白发扮卖饼阿婆 朱茵被黄贯中一眼认出</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1">【直播预告】专访《蚕食美国》制片人</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487724.md#1">【美股瞭望】选前通过纾困案恐是假议题</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487611.md#1">沈舟：习近平再称韩战胜利 到底谁赢了</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487409.md#1">白宫幕僚长：政府将对科技巨头提起诉讼</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487667.md#1">川普竞选团队：辩论委员会挑的主题偏拜登</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌如是大气回应</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
@@ -40,22 +40,22 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,859,794 人
+!共 365,860,274 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486819.md#1">【一线采访】民众厦门举横幅要中共下台</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485959.md#1">派送费急降又欠薪 大陆多地快递员集体罢工</a><br>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486027.md#1">丑闻爆发前 脸书推特高层加入拜登竞选团队</a><br>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486465.md#1">印方证实逮捕并拘禁中共士兵“将按程序送回”</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482843.md#1">【独家】严控意识形态 习近平左转三节点</a><br>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486465.md#1">印方证实逮捕并拘禁中共士兵“将按程序送回”</a><br>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486790.md#1">中共大闹台驻斐济代表处酒会 台朝野立委谴责</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485506.md#1">【翻墙必看】拜登邮件门牵出另一民主党大佬</a><br>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484121.md#1">程晓农：中共的现金外汇储备行将见底</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486447.md#1">湖北省长王晓东“隐身” 传中风住院</a><br>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486790.md#1">中共大闹台驻斐济代表处酒会 台朝野立委谴责</a><br>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484121.md#1">程晓农：中共的现金外汇储备行将见底</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌如是大气回应</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487592.md#1">黄脸白发扮卖饼阿婆 朱茵被黄贯中一眼认出</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487200.md#1">【役情最前线】江泽民老家数万螃蟹上岸</a><br>
