--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/23/n2974481.md#1" target="_blank">鲜为人知的马克思之四：好斗的马克思</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -385,17 +385,17 @@
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486752.md#1">【重播】川普亚利桑那演讲“让美国再次伟大”</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485836.md#1">【一线采访视频版】游青岛返粤 民众遭强制隔离</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485794.md#1">小祯被诊断胸椎脊上骨裂 脊椎打针吓到飙泪</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
 <li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
