--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/sjgjny386/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/sjgjny386/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sjgjny386/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484178.md#1" target="_blank">木天：驱逐西来幽灵神州方能焕新颜</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484178.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2010/03/1003141612551366-150x120.jpg" align ="left"></a>今天的神州大地，已经被共产这一西来幽灵破坏的体无完肤。炎黄子孙，在它几十年的迫害与迷惑中，渐渐失去了自己的文化传承与道德观，一步步随着它走向深渊。如今的中国，弥漫着谎言和欺骗，在物欲横流中人们都在随波逐流，不知前路危险。深处其中，作为一个中国人，我希望用自己的笔，写出我的所见，盼望着国人能苏醒，盼望着有一天神州能焕发新.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 6:23 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484143.md#1" target="_blank">洪达：悼联合国 恶霸成为人权判官</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484143.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-115-150x120.jpg" align ="left"></a>二零二零年十月十三日，联合国大会改选“人权理事会”（UNHRC）47席成员国其中的15席，结果包括中共等人权纪录不佳的国家获选。非政府组织“联合国观察”（UN Watch）质疑，未达自由民主基本标准的成员国比例从目前的51%提高至60%。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 5:44 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484126.md#1" target="_blank">杨叱：从闫丽梦母亲被捕说开去</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484126.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/2007180724141528-150x120.jpg" align ="left"></a>日前，看到新闻报导，说香港大学公共卫生学院前病毒研究员闫丽梦，因为逃到美国指控中共隐瞒新冠疫情，她大陆的母亲第四度被捕，家人被关押、骚扰……有网友评论：共党的株连、灭族有成熟经验，相当恐怖，让人焦虑的是，我们不知如何帮助正义家庭的苦难，因为在中共国，监视监控无所不及。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 4:42 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12475380.md#1" target="_blank">《共产主义黑皮书》：社会团体的种族化</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12475380.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/12/dcbb5ad1ea37934a168afd29d68d142e-150x120.jpg" align ="left"></a>应该严格而客观地评判红色高棉的罪行，以便可以将柬埔寨的经历与本世纪其它重大恐怖事件及其在共产主义历史上被分配的适当份量作比较。这种方法也有非常强大的法律原因，因为许多柬共领导人仍然活着，甚至以官方身份活跃着。他们应该被允许自由走动吗？如果不应该，那么应该对他们进行什么指控呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 4:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-150x120.jpg" align ="left"></a>这两条消息很不寻常。大选进入白热化阶段之际，拜登竞选团队忽然灭自家威风，这是在为败选打预防针吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 3:18 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483755.md#1" target="_blank">【网海拾贝】如何应对中共是今年美大选关键议题</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483755.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/Biden-and-Trump-1200x732-150x120.jpg" align ="left"></a>Thayer教授和我在国会山报发文，指如何应对中共国是今年大选关键议题，但却被忽视未能充分辩论；无论谁上台，美国必须有效反制党国，否则将贻害无穷，希望美国选民在11月的大选中，将党国问题作为重要考量来投票，因为这涉及到美国和自由世界的未来和前途。——@lianchaohan......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 11:36 AM			</td></tr>
@@ -24,12 +27,14 @@
 <tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481564.md#1" target="_blank">袁斌：中共炒台谍案 网友吐糟</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481564.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/019-11-04.48-150x120.jpg" align ="left"></a>两岸关系日趋紧张之际，中共近来频频利用媒体大肆操作所谓“台湾间谍案”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 12:38 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12480826.md#1" target="_blank">【名家专栏】警惕社媒审查 核实新闻来源</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12480826.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1215841152-web-150x120.jpg" align ="left"></a>没有法律保护公民免受媒体偏见的影响。随着总统大选迫在眉睫，线上政治操作紧锣密鼓，现在是时候对自我进行事实核查了。因为我们是从脸书或推特上获取的内容，我们相信我们所相信的信息吗？最好确保我们持有的观点是基于事实形成的，而不是政治操纵。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 7:25 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/15/n12478380.md#1" target="_blank">【名家专栏】欧洲央行失误 更多举债于事无补</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/15/n12478380.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1206707301-crop-1200x717-150x120.jpg" align ="left"></a>欧洲央行执行委员会成员伊莎贝尔?施纳贝尔曾在一篇发表在《法兰克福汇报》上的评论文章中说，目前各国政府过多举债不值得担心，这会增强央行在未来的独立性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 7:25 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481777.md#1" target="_blank">沈舟：南海升温 美航母折返 习改行程</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481777.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/50491950661_2b7193a514_o-150x120.jpg" align ="left"></a>10月13日，习近平视察了潮州海军陆战队基地，强调“海军陆战队是两栖精锐作战力量，需要维护“领土完整”、“海洋权益”、“海外利益”，并要求备战。
+<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484172.md#1" target="_blank">吐为快：十月惊奇</a><br></h3>闭关内循环，开放外无单；
+党孤天谴近，官斗睡不安。
 
-同一天，美军驱逐舰和日本海上自卫队驱逐舰正在南海联合操演。习近平话音刚落，美军航母里根号（CVN76）忽然从印度洋折返，再次穿越马六甲海峡，回到了南海。里根号航母刚刚穿.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 5:50 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12480522.md#1" target="_blank">【名家专栏】美就业率增长 经济复苏续加快</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12480522.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1270681119-150x120.jpg" align ="left"></a>上个月（9月份）美国失业人口减少了100万。按照这个速度，失业减缓、就业市场逐渐复苏，全美失业率可望在六个月之内恢复到疫情前的水平。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 6:19 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12479917.md#1" target="_blank">田云：美总统候选人答市民提问 再打脸中共</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12479917.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229094974-150x120.jpg" align ="left"></a>关于疫情、经济、法治、种族等事项，中国人民同样有权利、有必要质问当局。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 4:55 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12480378.md#1" target="_blank">王赫：安倍力促川普围剿中共</a><br></h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12480378.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/10/4f726f80baa83e61bf8985b6895352b0-150x120.jpg" align ="left"></a>在内阁频繁更换的日本，安倍晋三能长期执政也算是个雄才。他对日本政治和世界局势的最大影响之一，就是提出了“自由和开放的印度太平洋”构想，促成了美国川普政府现正大力推进的印太战略。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 4:50 PM			</td></tr>
+红楼惊弓鸟，处处闻恶报；
+房价遭臀斩，肺炎又惊爆。
+
+外汇渐枯竭，三驾马车歇；
+白等美大选，晚稻蒙飞雪。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 5:52 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12475346.md#1" target="_blank">朱瑞霞：于湾冤魂终古在，楚乡旧事扰人宁（三）</a><br></h3>葛伦平先生的爷爷葛学绍先生，饿死时约50岁；大伯伯葛明农先生，饿死时约24岁。
 
 葛明俊先生的母亲童氏，饿死时约60岁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 2:30 PM			</td></tr>
