--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195670.md#1" target="_blank">陈峰：造毛泽东像那些稀罕事儿</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132948.md#1" target="_blank">93岁老人：李洪志大师给了我第二次生命</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
