--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11276054.md#1" target="_blank">金言：蒋介石当年在江西的惊人预言</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
