--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232059.md#1" target="_blank">大陆移民旧金山推崇法轮功：真善忍好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
