--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,6 +23,16 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>新西兰基督城隔离酒店确诊11个病例</h3>
+<p>新西兰基督城一家隔离酒店出现国际海员集体感染，已经有11人的Covid检测结果呈阳性。<br />
+据《新西兰先驱报》报导，新西兰卫生部称，还有14例“正在进一步调查中”。</p>
+<p>该卫生部表示：“所有病例都是在例行检测的第3天测试中发现的输入病例。没有一个涉及社区传播的病例。”</p>
+<p>Sudima酒店的首席执行官摩根（Les Morgan）表示，酒店已被封锁。一名工作人员联系了他，告诉他有“一些感染病例”，他对此表示关切，并在等待卫生官员的最新消息。</p>
+<p>据报导，这是新西兰多家渔业公司引入来自俄罗斯和乌克兰的首批海员，于上周五自抵达后一直在基督城机场附近的Sudima 酒店隔离。</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Health officials have confirmed 11 international seamen in a Christchurch hotel have tested positive for Covid — 14 more cases are &#39;under further investigation&quot;. <ahref="https://t.co/huU1IMW9fj">https://t.co/huU1IMW9fj</a> <ahref="https://t.co/UiXWm7nevj"></a><img width="600" src="https://raw.githubusercontent.com/kztpea348/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="UiXWm7nevj</a></p>
+<p>&mdash; nzherald (@nzherald) <ahref="https://twitter.com/nzherald/status/1318393968611254272?ref_src=twsrc%5Etfw">October 20, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a> </p>
 <h3>阿根廷的Covid-19病例破百万</h3>
 <p>阿根廷卫生部的数据显示，阿根廷在周一的感染Covid-19的病例总数已突破100万例。</p>
 <p>阿根廷卫生部周二报告，在过去24小时内，该国增加了12,982例新病例，使阿根廷已知病例总数达到1,002,662例。</p>
@@ -106,7 +116,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273123.md#1" target="_blank">汶川地震山崩地裂的那一刻</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
