--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -116,7 +116,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894912.md#1" target="_blank">毛泽东诗词被党媒“高级黑”</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
