--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,6 +23,13 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>伊朗周一报告Covid-19死亡人数创疫情以来新高</h3>
+<p>伊朗卫生部表示，伊朗周一报告有337例新的与Covid-19相关的死亡病例。这是自大流行病开始以来，该国单日死亡人数最高的一天。</p>
+<p>据该卫生部称，目前伊朗至少有30,712人死于感染这种新型冠状病毒（中共病毒）。</p>
+<p>伊朗当局还表示，周一报告增加了4251个新的Covid-19病例，使全国总病例数达到534,631例。</p>
+<p>然而，外界一直质疑伊朗疫情真实数据性，其实际的病例数及死亡人数比统计的要高。</p>
+<p>另外，伊朗为了遏止最新一波疫情爆发，已经对进出首都德黑兰的旅行实施限制。</p>
+<figure id="attachment_12457437" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228742689-1-e1601989647372.jpg"><img src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228742689-1-600x401.jpg" alt="" width="600" b="401" class="size-large wp-image-12457437" /></a><figcaption class="wp-caption-text">9月27日，在伊朗首都德黑兰的街头，人们戴着口罩经过商店。(ATTA KENARE/AFP via Getty Images)</figcaption></figure>
 <h3>新西兰基督城隔离酒店确诊11个病例</h3>
 <p>新西兰基督城一家隔离酒店出现国际海员集体感染，已经有11人的Covid检测结果呈阳性。<br />
 据《新西兰先驱报》报导，新西兰卫生部称，还有14例“正在进一步调查中”。</p>
@@ -30,9 +37,9 @@
 <p>Sudima酒店的首席执行官摩根（Les Morgan）表示，酒店已被封锁。一名工作人员联系了他，告诉他有“一些感染病例”，他对此表示关切，并在等待卫生官员的最新消息。</p>
 <p>据报导，这是新西兰多家渔业公司引入来自俄罗斯和乌克兰的首批海员，于上周五自抵达后一直在基督城机场附近的Sudima 酒店隔离。</p>
 <blockquote class="twitter-tweet">
-<p lang="en" dir="ltr"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Health officials have confirmed 11 international seamen in a Christchurch hotel have tested positive for Covid — 14 more cases are &#39;under further investigation&quot;. <ahref="https://t.co/huU1IMW9fj">https://t.co/huU1IMW9fj</a> <ahref="https://t.co/UiXWm7nevj"></a><img width="600" src="https://raw.githubusercontent.com/kztpea348/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="UiXWm7nevj</a></p>
-<p>&mdash; nzherald (@nzherald) <ahref="https://twitter.com/nzherald/status/1318393968611254272?ref_src=twsrc%5Etfw">October 20, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a> </p>
+<p dir="ltr" lang="en"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Health officials have confirmed 11 international seamen in a Christchurch hotel have tested positive for Covid — 14 more cases are &#8216;under further investigation&#8221;. <ahref="https://t.co/huU1IMW9fj">https://t.co/huU1IMW9fj</a> <ahref="https://t.co/UiXWm7nevj"></a><img width="600" src="https://raw.githubusercontent.com/kztpea348/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="UiXWm7nevj</a></p>
+<p>— nzherald (@nzherald) <ahref="https://twitter.com/nzherald/status/1318393968611254272?ref_src=twsrc%5Etfw">October 20, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <h3>阿根廷的Covid-19病例破百万</h3>
 <p>阿根廷卫生部的数据显示，阿根廷在周一的感染Covid-19的病例总数已突破100万例。</p>
 <p>阿根廷卫生部周二报告，在过去24小时内，该国增加了12,982例新病例，使阿根廷已知病例总数达到1,002,662例。</p>
@@ -116,7 +123,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232804.md#1" target="_blank">共产暴政录：精于绑票和洗劫的方志敏</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
