--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,13 +23,18 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>遏止新疫情 意大利伦巴第大区将实行宵禁</h3>
+<p>意大利伦巴第（Lombardy ）是今年初Covid-19 大流行病第一波期间意大利受灾最严重的地区，但是近期爆发新疫情，其将颁布宵禁令，以遏制新病例增长。</p>
+<p>根据伦巴第区宵禁令，从本周四开始——几乎所有的公共活动和旅行都必须从晚上11点开始停止，到次日凌晨5点。地区当局还同意在周末关闭购物中心，但销售食品和基本生活用品的商店除外，以防止病毒有更多机会传播。</p>
+<p>伦巴第是米兰市的所在地，人口超过1000万。新型冠状病毒（中共病毒）在大流行之初的日子里给该地区造成了惊人的损失，使许多人称该地区为欧洲的疫情中心。老年人群受到的打击尤为严重。</p>
+<p>有关确切的豁免、宵禁令将持续多久、以及如何执行等细节信息，将在即将发布的地区法令中宣布。根据最新的政府法令，地方行政部门有权对其所在地区实施封锁和宵禁。</p>
 <h3>伊朗周一报告Covid-19死亡人数创疫情以来新高</h3>
 <p>伊朗卫生部表示，伊朗周一报告有337例新的与Covid-19相关的死亡病例。这是自大流行病开始以来，该国单日死亡人数最高的一天。</p>
 <p>据该卫生部称，目前伊朗至少有30,712人死于感染这种新型冠状病毒（中共病毒）。</p>
 <p>伊朗当局还表示，周一报告增加了4251个新的Covid-19病例，使全国总病例数达到534,631例。</p>
 <p>然而，外界一直质疑伊朗疫情真实数据性，其实际的病例数及死亡人数比统计的要高。</p>
 <p>另外，伊朗为了遏止最新一波疫情爆发，已经对进出首都德黑兰的旅行实施限制。</p>
-<figure id="attachment_12457437" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228742689-1-e1601989647372.jpg"><img src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228742689-1-600x401.jpg" alt="" width="600" b="401" class="size-large wp-image-12457437" /></a><figcaption class="wp-caption-text">9月27日，在伊朗首都德黑兰的街头，人们戴着口罩经过商店。(ATTA KENARE/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_12457437" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228742689-1-e1601989647372.jpg"><img class="size-large wp-image-12457437" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228742689-1-600x401.jpg" alt="" width="600" b="401" /></a><figcaption class="wp-caption-text">9月27日，在伊朗首都德黑兰的街头，人们戴着口罩经过商店。(ATTA KENARE/AFP via Getty Images)</figcaption></figure>
 <h3>新西兰基督城隔离酒店确诊11个病例</h3>
 <p>新西兰基督城一家隔离酒店出现国际海员集体感染，已经有11人的Covid检测结果呈阳性。<br />
 据《新西兰先驱报》报导，新西兰卫生部称，还有14例“正在进一步调查中”。</p>
@@ -123,7 +128,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/12/24/n4042174.md#1" target="_blank">大陆民间这些惊人预言都指向同一件大事</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883126.md#1" target="_blank">“1400例”闹剧出笼记</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
