--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,6 +23,12 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>土耳其新增病例超2,000 达5月初水平</h3>
+<p>周一（19日），土耳其单日新增病例数突破了2,000，达到5月初对企业和家庭实施限制时最后一次所见的水平。</p>
+<p>路透社报导说，卫生部的数据显示，又有2,026个表现出症状的人确诊染疫。土耳其继续仅报告有症状的病例，遭到反对派和医学专家的批评。</p>
+<p>5月6日新确诊了2,253例病例。</p>
+<p>数据显示，截至周一，患者总数达到349,519人。 </p>
+<p>数据还显示，过去24小时内新增了75人死亡，也达到5月初以来的单日最高水平，使死亡总人数升至9,371人。</p>
 <h3>黎巴嫩安全总局局长病毒检测呈阳性</h3>
 <p>黎巴嫩安全总局的办公室周一宣布，局长阿巴斯·易卜拉欣（Abbas Ibrahim）在访问华盛顿期间，他的Covid-19检测结果呈阳性反应。</p>
 <p>发到脸书上的帖子说，阿巴斯·易卜拉欣少将在华盛顿接受了冠状病毒（中共病毒）检测，结果呈阳性反应。易卜拉欣原定在访华盛顿之后，在巴黎举行会议，但现在已被取消该会议。</p>
@@ -132,7 +138,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10997952.md#1" target="_blank">女儿获9万澳元奖学金 澳洲母女感恩法轮功</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307769.md#1" target="_blank">中共淫乱的前生今世（10）溃堤效应</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
