--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -29,6 +29,7 @@
 <p>5月6日新确诊了2,253例病例。</p>
 <p>数据显示，截至周一，患者总数达到349,519人。 </p>
 <p>数据还显示，过去24小时内新增了75人死亡，也达到5月初以来的单日最高水平，使死亡总人数升至9,371人。</p>
+<p>为减缓病毒的传播，土耳其于今年早些时候实行了周末封锁，限制城市间旅行并关闭餐馆和咖啡馆。6月份，几乎所有限制都被取消。 此后，政府实施了社交疏离和戴口罩等措施，并对违反规定者处以罚款。</p>
 <h3>黎巴嫩安全总局局长病毒检测呈阳性</h3>
 <p>黎巴嫩安全总局的办公室周一宣布，局长阿巴斯·易卜拉欣（Abbas Ibrahim）在访问华盛顿期间，他的Covid-19检测结果呈阳性反应。</p>
 <p>发到脸书上的帖子说，阿巴斯·易卜拉欣少将在华盛顿接受了冠状病毒（中共病毒）检测，结果呈阳性反应。易卜拉欣原定在访华盛顿之后，在巴黎举行会议，但现在已被取消该会议。</p>
@@ -138,7 +139,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/3/n11428903.md#1" target="_blank">林辉：周恩来冷酷无情 亲手给荣高棠扣叛徒帽子</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
